--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/scottnm/Homepage/tarball/master" class="tar">tar</a><a href="https://github.com/scottnm/Homepage/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <!--<a href="https://github.com/scottnm/Homepage/tarball/master" class="tar">tar</a><a href="https://github.com/scottnm/Homepage/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>-->
     <p class="name"></p>
   </div>
 
