--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="inner">
           <!--<a href="https://github.com/scottnm/Homepage/tarball/master" class="download-button tar"><span>Download</span></a>
           <a href="https://github.com/scottnm/Homepage/zipball/master" class="download-button zip"><span>Download</span></a>-->
+          <a href="files/resume.pdf" download>View Scott Munro's Resume</a><br>
           <a href="https://github.com/scottnm/" class="code">View Scott Munro on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
@@ -44,7 +45,7 @@
             <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome
           </h3>
           
-          <p>I am an aspiring Software Engineer and full time Computer Science student at the University of Texas at Austin. Most of the projects' source listed on this resume can be found on my Github.</p>
+          <p>I am an aspiring Software Engineer and full time Computer Science student at the University of Texas at Austin. Most of the projects' source listed on this site can be found on my Github.</p>
           
           <div id="interests-and-skills-container">
 	          <div>
